Add BMI calculator and digital clock features with styling updates

--- a/Basic_project2/index.html
+++ b/Basic_project2/index.html
@@ -13,7 +13,7 @@
             <p><label>Height in CM: </label><input type="text" id="height"></p>
             <p><label>Weight in KG: </label><input type="text" id="weight"></p>
             <button>Calculate</button>
-            <div id="results"></div>
+            <div id="result"></div>
 
             <div id="weight_guide">
                 <h3>Weight Guide</h3>
@@ -23,5 +23,6 @@
             </div>
         </form>
     </div>
+    <script src="./BMI.js"></script>
 </body>
 </html>
