Add number guessing game implementation with HTML, CSS, and JavaScript

--- a/Basic_project2/index.html
+++ b/Basic_project2/index.html
@@ -21,6 +21,7 @@
                 <p>Normal: 18.5 - 24.9</p>
                 <p>Overweight: 25 - 29.9</p>
             </div>
+            <div id="weight_validation"></div>
         </form>
     </div>
     <script src="./BMI.js"></script>
