Refactor number guessing game logic and enhance UI styling

--- a/Basic_project4/index.html
+++ b/Basic_project4/index.html
@@ -21,7 +21,7 @@
 
         <div class="resultParas">
             <p>Previous Guesses:<span class="Guesses"></span></p>
-            <p>Guesses Remaining: <span class="Lastresult">10</span></p>
+            <p>Guesses Remaining: <span class="lastResult">10</span></p>
             <p class="lowOrHi"></p>
         </div>
     </div>
