--- a/Mini_project_1/index.html
+++ b/Mini_project_1/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
 
         <h1>Password Generator</h1>
         <div class="display_container">
-            <input readonly placeholder="Generated Password" class="display" data-passwordDisplay><!--  data-passwordDisplay is custom attribute -->
+            <input readonly placeholder="Generated Password" class="display" data-passwordDisplay> 
+            <!--  data-passwordDisplay is custom attribute -->
 
-            <button>
-                <span data-copymsg></span> <!--copied message when clicking the copy icon -->
+            <button data-copy>
+                <span data-copyMsg></span> <!--copied message when clicking the copy icon -->
                 <img src="./icons8-copy-24.png" alt="copy" width="23" height ="23"><!--  data-copybtn is custom attribute -->
             </button>
         </div>
@@ -21,7 +23,7 @@
         <div class="input-container">
             <div class="length-container">
                 <p>Password Length</p>
-                <p>0</p>
+                <p data-lengthNumber>0</p>
               <!--  <input type="number" min="1" max="20" value="10" data-lengthInput> data-lengthInput is custom attribute -->
             </div>
             <!-- SLIDER -->
@@ -53,5 +55,6 @@
         </div>
         <button class="generate-btn">Generate Password</button>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
