--- a/Mini_project_1/index.html
+++ b/Mini_project_1/index.html
@@ -14,8 +14,8 @@
             <input readonly placeholder="Password" class="display" data-passwordDisplay> 
             <!--  data-passwordDisplay is custom attribute -->
 
-            <button data-copy>
-                <span data-copyMsg></span> <!--copied message when clicking the copy icon -->
+            <button class="copyBtn" data-copy>
+                <span class="toolTip" data-copyMsg></span> <!--copied message when clicking the copy icon -->
                 <img src="./icons8-copy-24.png" alt="copy" width="23" height ="23"><!--  data-copybtn is custom attribute -->
             </button>
         </div>
