--- a/Mini_project_2/index.html
+++ b/Mini_project_2/index.html
@@ -12,7 +12,7 @@
         <h1>Weather App</h1>
 
         <div class="tab-vontainer">
-            <p class="tab" data-useWeather>Your Weather</p>
+            <p class="tab" data-userWeather>Your Weather</p>
             <p class="tab" data-searchWeather>Search Weather</p>
         </div>
 
@@ -46,11 +46,42 @@
                     <p data-cityName></p> <!--Dynamic use case -->
                     <img data-countryIcon> <!--Dynamic -->
                 </div>
+                <!-- weather desc -->
+                <p weatheDesc></p>
+                <!-- Weather Icon -->
+                <img dataWeatherIcon>
+                <!-- tempareture -->
+                <p data-temp></p>
+       
+                <!-- 3-Box Parameter details -->
+                <div class="parameter-container"> <!--main box div-->
+                    <!-- card1 -->
+                    <div class="parameter">
+                        <img src="./wind.png" width="80" height="80" loading="lazy">
+                        <p>WindSpeed</p>
+                        <p data-windSpeed></p>
+                    </div>
+
+                    <!-- card2 -->
+                    <div class="parameter">
+                        <img src="./humidity.png" width="80" height="80" loading="lazy">
+                        <p>Humidity</p>
+                        <p data-humidity></p>
+                    </div>
+
+                    <!-- card3 -->
+                    <div class="parameter">
+                        <img src="./cloud.png" width="80" height="80" loading="lazy">
+                        <p>Clouds</p>
+                        <p data-cloudyness></p>
+                    </div> 
+                </div> 
+
             </div>
         </div>
     </div>
 
-    <script src="./weather.js"></script>
+    <script src="./index.js"></script>
     
 </body>
 </html>
