--- a/Mini_project_2/index.html
+++ b/Mini_project_2/index.html
@@ -22,7 +22,7 @@
             <img src="./Location.png" alt="location_symbol" width="80" height="80" loading="lazy">
             <p>Grant Location Access</p>
             <p>Allow access to get weather Information</p>
-            <button class="btn" data-grantLoc>Grant Access</button>
+            <button class="btn" data-grantAccess>Grant Access</button>
             </div>
 
             <!--Search Form -> Form Container -->
@@ -47,9 +47,9 @@
                     <img data-countryIcon> <!--Dynamic -->
                 </div>
                 <!-- weather desc -->
-                <p weatheDesc></p>
+                <p data-weatheDesc></p>
                 <!-- Weather Icon -->
-                <img dataWeatherIcon>
+                <img data-WeatherIcon>
                 <!-- tempareture -->
                 <p data-temp></p>
        
