--- a/Mini_project_2/index.html
+++ b/Mini_project_2/index.html
@@ -28,7 +28,7 @@
             <!--Search Form -> Form Container -->
             <form class="form-container" data-searchForm>
             <input placeholder="Search for city.." data-searchInput>
-            <button class="'btn">
+            <button class="'btn" type="submit">
                 <img src="./search.png" width="80" height="80" loading="lazy">
             </button>
             </form>
