--- a/Mini_project_2/index.html
+++ b/Mini_project_2/index.html
@@ -11,14 +11,14 @@
     <div class="wrapper">
         <h1>Weather App</h1>
 
-        <div class="tab-vontainer">
+        <div class="tab-container">
             <p class="tab" data-userWeather>Your Weather</p>
             <p class="tab" data-searchWeather>Search Weather</p>
         </div>
 
         <div class="weather-container">
             <!-- grant location part container -->
-            <div class="grant-location-container">
+            <div class="sub-container grant-location-container">
             <img src="./Location.png" alt="location_symbol" width="80" height="80" loading="lazy">
             <p>Grant Location Access</p>
             <p>Allow access to get weather Information</p>
@@ -28,8 +28,8 @@
             <!--Search Form -> Form Container -->
             <form class="form-container" data-searchForm>
             <input placeholder="Search for city.." data-searchInput>
-            <button class="'btn" type="submit">
-                <img src="./search.png" width="80" height="80" loading="lazy">
+            <button class="btn" type="submit">
+                <img src="./search.png" width="40" height="40" loading="lazy">
             </button>
             </form>
 
@@ -40,14 +40,14 @@
             </div>
             
             <!-- Show User weather info -->
-            <div class="user-info-container">
+            <div class="sub-container user-info-container">
 
                 <div class="name">
                     <p data-cityName></p> <!--Dynamic use case -->
                     <img data-countryIcon> <!--Dynamic -->
                 </div>
                 <!-- weather desc -->
-                <p data-weatheDesc></p>
+                <p data-weatherDesc></p>
                 <!-- Weather Icon -->
                 <img data-WeatherIcon>
                 <!-- tempareture -->
@@ -55,6 +55,7 @@
        
                 <!-- 3-Box Parameter details -->
                 <div class="parameter-container"> <!--main box div-->
+
                     <!-- card1 -->
                     <div class="parameter">
                         <img src="./wind.png" width="80" height="80" loading="lazy">
